# CallMeMaybe

./: .gitignore  Makefile  README.md  llm_sdk-0.1.0-py3-none-any.whl  mypy.ini  pyproject.toml  task.md
data/input/: function_calling_tests.json  functions_definition.json
data/output/: function_calling_results.json
src/: __main__.py  config.py  generator.py  loader.py
src/call_me_maybe.egg-info/: PKG-INFO  requires.txt
src/models/: function.py  function_call.py  parameter.py  promt.py
src/utils/: constrained_decoding.py
tests/: test_loader.py
