[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "llm-sdk",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "build>=1.5.0",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk-0.1.0-py3-none-any.whl" }
